Fix logo squishing: width auto so aspect ratio follows inline height

--- a/mihir_files/style.css
+++ b/mihir_files/style.css
@@ -1160,7 +1160,7 @@ li a:hover{
 .company-logo {
   float: right;
   height: auto;
-  width: 150px;
+  width: auto;
 }
 
 .exp-desc {
